29) kernel: ralink_raeth: switch control: fix VLAN filtering on MT7621 ESW with GE2->P5 case.<br>
30) kernel: mips: avoid mcheck by flushing page range in huge_ptep_set_access_flags().<br>
31) kernel: mips: fix branch emulation of branch likely instructions.<br>
32) kernel: mips: add option to disable software I/O  coherency.<br>
33) kernel: mips: reduce code size for MIPS32R2 platforms.<br>
34) kernel: mips: dsp: add assembler support for DSP ASEs.<br>
35) kernel: mips: dsp: simplify the DSP macros.<br>
36) kernel: mips: dsp: fix code generation for non-DSP capable CPUs.<br>
37) kernel: net: fix stacked vlan offload features computation.<br>
38) kernel: net: reject creation of netdev names with colons.<br>
39) kernel: net: tcp: fix tcp_should_expand_sndbuf() to use tcp_packets_in_flight().<br>
40) kernel: net: tcp: tso: remove tp->tso_deferred.<br>
41) kernel: net: tcp: tso: allow CA_CWR state in tcp_tso_should_defer().<br>
42) kernel: net: ipv6: addrconf: validate new MTU before applying it.<br>
43) kernel: net: allow enable/disable XPS/RPS configure.<br>
44) kernel: genirq: introduce irq_do_set_affinity() to reduce duplicated code.<br>
45) kernel: genirq: allow forcing cpu affinity of interrupts.<br>
46) kernel: genirq: provide irq_force_affinity fallback for non-SMP.<br>
47) kernel: genirq: set initial affinity in irq_set_affinity_hint().<br>
48) kernel: revert mips: Remove race window in page fault handling.<br>
49) kernel: review fastpath section use (save more cpu ~4% up).<br>
50) kernel/uboot: add 25Q*BSIG flash chips support.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>